--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ argparse==1.2.1
 dj-database-url==0.3.0
 dj-static==0.0.6
 django-admin-bootstrapped==1.6.5
+django-easyregistration==0.1
 django-toolbelt==0.0.1
 gunicorn==19.0.0
 psycopg2==2.5.3
