--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ dj-static==0.0.6
 django-admin-bootstrapped==1.6.5
 django-easyregistration==0.1
 django-toolbelt==0.0.1
+django-twitter-bootstrap==3.1.1
 gunicorn==19.0.0
 psycopg2==2.5.3
 static3==0.5.1
