--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,26 @@
 Django==1.6.5
+Pillow==2.5.1
 Unipath==1.0
 argparse==1.2.1
+astroid==1.2.0
+beautifulsoup4==4.3.2
 dj-database-url==0.3.0
 dj-static==0.0.6
 django-admin-bootstrapped==1.6.5
+django-blog-zinnia==0.14.1
+django-contrib-comments==1.5
 django-easyregistration==0.1
+django-mptt==0.6.1
+django-tagging==0.3.2
 django-toolbelt==0.0.1
 django-twitter-bootstrap==3.1.1
+django-xmlrpc==0.1.5
 gunicorn==19.0.0
+logilab-common==0.62.1
 psycopg2==2.5.3
+pylint==1.3.0
+pyparsing==2.0.2
+pytz==2014.4
 static3==0.5.1
 wsgiref==0.1.2
+zinnia-theme-bootstrap==0.3.1
